--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "ant-design-vue": "^1.2.4",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-router": "^3.2.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
     "@vue/cli-service": "~4.5.12",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "vue-cli-plugin-ant-design": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
